--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,4 @@
 @import "./utils/plaseholder";
 @import "./utils/visually-hidden";
 @import "./components/header";
-@import "";
-@import "";
-@import "";
+@import "./components/hero";
