--- a/sass/utils/_plaseholder.scss
+++ b/sass/utils/_plaseholder.scss
@@ -13,9 +13,14 @@
     padding: 0;
 }
 
+.footer,
+.hero {
+    background-color: #2F303A;
+}
+
 body {
-    background-color: var(--primary-bg-color);
-    color: var(--primary-text-color);
+    background-color: $primary-bg-color;
+    color: $primary-text-color;
     font-family: roboto, sans-serif;
     letter-spacing: 0.03em;
     font-weight: 400;
@@ -38,4 +43,25 @@ img {
     display: block;
     margin: 0;
     bottom: 0;
+}
+
+.button {
+    color: $white-text-color;
+    background-color: $focus-button-bg-color;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 10px 32px;
+    margin-left: auto;
+    margin-right: auto;
+    border: transparent;
+    transition: background-color $transition-duration $overlay-cubic;
+}
+
+.button:hover,
+.button:focus {
+    background-color: $focus-button-bg-color-order;
 }
