--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,6 @@
 @import "./utils/visually-hidden";
 @import "./components/header";
 @import "./components/hero";
+@import "./components/features";
+@import "./components/doing";
+@import "./components/team";
