--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,10 +1,9 @@
-.section-title,
-.section-title-name,
-.section-title-photos {
-    color: $titile-text-color;
+.section-team {
+    background-color: $grey-bg-color;
 }
 
-.section-title {
+.section-team__title {
+    color: $titile-text-color;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
@@ -13,29 +12,22 @@
     margin-bottom: 50px;
 }
 
-.section.team {
-    background-color: $grey-bg-color;
-}
-
-.section-title-name {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    padding-bottom: 10px;
-}
-
-.section-title-profession {
-    font-size: 16px;
-    line-height: 1.19;
-    padding-bottom: 16px;
-}
-
-.list-team {
+.team-list {
     display: flex;
     margin-left: -30px;
 }
 
-.container-team {
+.team-list__item {
+    background-color: $primary-bg-color;
+    width: 270px;
+    margin-left: 30px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team-list__container {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -44,7 +36,35 @@
     margin-bottom: 30px;
 }
 
-.social-link {
+.team-list__name {
+    color: $titile-text-color;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    padding-bottom: 10px;
+}
+
+.team-list__profession {
+    font-size: 16px;
+    line-height: 1.19;
+    padding-bottom: 16px;
+}
+
+.social-list {
+    display: flex;
+    justify-content: center;
+}
+
+.social-list__item {
+    width: 44px;
+    height: 44px;
+
+    &:not(:last-child) {
+        margin-right: 10px;
+    }
+}
+
+.social-list__link {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -55,40 +75,16 @@
     background-color: $primary-bg-color;
     transition: color $transition-duration $overlay-cubic,
         background-color $transition-duration $overlay-cubic;
+
+    &:hover,
+    &:focus {
+        color: $primary-bg-color;
+        background-color: $focus-button-bg-color;
+    }
 }
 
-.social-link:hover,
-.social-link:focus {
-    color: $primary-bg-color;
-    background-color: $focus-button-bg-color;
-}
-
-.social-icon {
+.social-list__icon {
     width: 20px;
     height: 20px;
     fill: currentColor;
-}
-
-.social-item {
-    width: 44px;
-    height: 44px;
-}
-
-.social-item:not(:last-child) {
-    margin-right: 10px;
-}
-
-.list.social {
-    display: flex;
-    justify-content: center;
-}
-
-.list-team .item {
-    background-color: $primary-bg-color;
-    width: 270px;
-    margin-left: 30px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-        0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
 }
