--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,5 @@
 @import "./components/features";
 @import "./components/doing";
 @import "./components/team";
+@import "./components/client";
+@import "./components/footer";
