--- a/css/main.css
+++ b/css/main.css
@@ -770,6 +770,12 @@ img {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
 .backdrop.is-hidden .modal {
   -webkit-transform: translate(-50%, -50%) scale(0.8);
           transform: translate(-50%, -50%) scale(0.8);
@@ -822,10 +828,6 @@ img {
 
 .modal__close-button:hover {
   fill: #2196F3;
-}
-
-.button.send {
-  min-width: 200px;
 }
 
 /* modal form */
@@ -881,7 +883,7 @@ img {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-form__input {
+.contact-form__input--height {
   height: 40px;
 }
 
@@ -968,6 +970,11 @@ img {
   cursor: pointer;
 }
 
+.contact-form-policy__label--rules {
+  margin-left: 0.25rem;
+  color: #2196F3;
+}
+
 .contact-form-policy__checkbox {
   display: inline-block;
   width: 16px;
@@ -986,11 +993,7 @@ img {
   background-origin: border-box;
 }
 
-.contact-form-policy__label--rules {
-  color: #2196F3;
-}
-
-.form button {
+.button__send {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1000,5 +1003,6 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  min-width: 200px;
 }
 /*# sourceMappingURL=main.css.map */
