--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,11 +11,11 @@
     transition: opacity $transition-duration $overlay-cubic, visibility $transition-duration $overlay-cubic;
 }
 
-// .backdrop.is-hidden {
-//     visibility: hidden;
-//     opacity: 0;
-//     pointer-events: none;
-// }
+.backdrop.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
 
 .backdrop.is-hidden .modal {
     transform: translate(-50%, -50%) scale(0.8);
@@ -60,12 +60,7 @@
     }
 }
 
-.button.send {
-    min-width: 200px;
-}
-
 /* modal form */
-
 .form {
     width: 448px;
     margin-left: auto;
@@ -110,10 +105,10 @@
     resize: none;
     cursor: pointer;
     transition: border $transition-duration $overlay-cubic;
-}
 
-.contact-form__input {
-    height: 40px;
+    &--height {
+        height: 40px;
+    }
 
     &--comment {
         padding: 12px 16px;
@@ -163,6 +158,10 @@
     letter-spacing: 0.03em;
     cursor: pointer;
 
+    &--rules {
+        margin-left: 0.25rem;
+        color: $accent-text-color;
+    }
 }
 
 .contact-form-policy__checkbox {
@@ -183,12 +182,9 @@
     background-origin: border-box;
 }
 
-.contact-form-policy__label--rules {
-    color: $accent-text-color;
-}
-
-.form button {
+.button__send {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-width: 200px;
 }
