--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
 @import "./utils/variables";
-@import "./utils/plaseholder";
+@import "./utils/plaseholders";
 @import "./utils/visually-hidden";
+@import "./base/base";
+
 @import "./components/header";
 @import "./components/hero";
 @import "./components/features";
