--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -1,17 +1,10 @@
 .client-section__title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-    margin-top: 0;
-    margin-bottom: 50px;
-    color: $titile-text-color;
+    @extend %title;
 }
 
 .client-section__list {
-    display: flex;
+    @extend %centeredFlex;
     flex-wrap: wrap;
-    justify-content: center;
 }
 
 .client {
@@ -24,9 +17,7 @@
 }
 
 .client__button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @extend %centeredFlex;
     width: 100%;
     height: 100%;
     border-radius: 50%;
