--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,17 +1,10 @@
 .section-features__title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-    margin-top: 0;
-    margin-bottom: 50px;
-    color: $titile-text-color;
+    @extend %title;
 }
 
 .features-list {
-    display: flex;
+    @extend %centeredFlex;
     flex-wrap: wrap;
-    justify-content: center;
     margin-left: -30px;
 }
 
