--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,4 +1,8 @@
 // logo + adress
+.footer {
+    background-color: #2F303A;
+}
+
 .footer-container {
     display: flex;
     align-items: flex-start;
@@ -43,6 +47,11 @@
     font-style: normal;
     margin-bottom: 9px;
     text-decoration: none;
+
+    &:hover,
+    &:focus {
+        color: $accent-text-color;
+    }
 }
 
 .footer__address {
@@ -91,9 +100,7 @@
 }
 
 .footer-social__link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @extend %centeredFlex;
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -164,6 +171,7 @@
     padding-left: 12px;
 
     &--text {
+        @extend %button;
         display: inline-flex;
         align-items: center;
         padding: 10px 28px;
