--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,8 +4,7 @@
 }
 
 .container-header {
-    display: flex;
-    align-items: center;
+    @extend %centeredFlex;
 }
 
 .logo {
@@ -24,7 +23,7 @@
 }
 
 .site-nav {
-    display: flex;
+    @extend %centeredFlex;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -61,12 +60,16 @@
         background: $focus-button-bg-color;
         border-radius: 2px;
     }
+
+    &:hover,
+    &:focus {
+        color: $accent-text-color;
+    }
 }
 
 
 .auth-nav {
-    display: flex;
-    align-items: center;
+    @extend %centeredFlex;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -80,8 +83,7 @@
 }
 
 .auth-nav__link {
-    display: flex;
-    align-items: center;
+    @extend %centeredFlex;
     color: $primary-text-color;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -108,10 +110,3 @@
     margin-right: 10px;
     fill: currentColor;
 }
-
-.decor:hover,
-.decor:focus {
-    color: $accent-text-color;
-}
-
-
