--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -2,6 +2,7 @@
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
+    background-color: #2F303A;
     background-image: url(../images/Img-Overlay.png),
         url(../images/bg-hero.jpg);
     background-repeat: no-repeat;
