--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -41,9 +41,7 @@
     position: absolute;
     right: 8px;
     top: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @extend %centeredFlex;
     padding: 0;
     margin: 0;
     width: 30px;
@@ -141,17 +139,12 @@
 }
 
 .contact-form-policy {
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
     padding-bottom: 30px;
     margin: 0;
 }
 
 .contact-form-policy__label {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @extend %centeredFlex;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
@@ -183,8 +176,7 @@
 }
 
 .button__send {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @extend %button;
+    @extend %centeredFlex;
     min-width: 200px;
 }
