--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -151,6 +151,7 @@
     color: $white-text-color;
     transition: border $transition-duration $overlay-cubic;
     outline: none;
+    cursor: pointer;
 
     &::placeholder {
         font-weight: 400;
