--- a/css/main.css
+++ b/css/main.css
@@ -597,6 +597,7 @@ ul {
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: none;
+  cursor: pointer;
 }
 
 .subscribe-form__inpit::-webkit-input-placeholder {
